add a days_left for the next meeting activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,10 +4,15 @@
     <string name="app_name">Love</string>
     <string name="edit_message">Say sth to me babe boy</string>
     <string name="button_send">Send</string>
+    <string name="button_date">Date</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_display_message">Dani Message</string>
+    <string name="title_activity_display_date">Dani Meet Date</string>
 	<string name="action_album">Album</string>
+	<string name="days_left">Days Left</string>
+	
+	<string name="button_date_sure">Sure</string>
     
 </resources>
